Everything is added

--- a/acme/index.html
+++ b/acme/index.html
@@ -59,14 +59,16 @@
 
 
             <div class="box">
-                    <h3>Graphic Design </h3>
                     <img src="./img/logo_brush.png" alt="showcase">
+                    <h3>Graphic Design </h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sapien sapien, pharetra eu va</p>
             </div>
 
         </div>
     </section>
-
+    <footer>
+        <p>Acme Web Deisgn, Copyright &copy; 2017</p>
+      </footer>
 
 </body>
 </html>
