new update from acme

--- a/acme/about.html
+++ b/acme/about.html
@@ -41,13 +41,14 @@
                 <h1 class="page-title">About us</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent libero neque, lobortis quis enim id, lobortis vulputate est. Donec tincidunt ligula a erat elementum, non tincidunt diam fermentum. Ut ac justo a massa posuere aliquet. Quisque magna augue, venenatis nec tortor eget, maximus aliquam urna. Phasellus nec cursus eros. Ut a tortor eu dui consequat volutpat. Cras nec porta augue, sagittis lacinia nisl. Vestibulum a dolor sed odio sollicitudin molestie in finibus est. Suspendisse lacinia cursus turpis sit amet auctor. Etiam ac eleifend mauris. Mauris eget neque maximus elit ullamcorper molestie. Quisque quis felis at justo ultricies posuere. Pellentesque tincidunt ullamcorper turpis, nec ultricies arcu vestibulum sed. Suspendisse maximus felis in velit interdum lobortis. Proin fringilla leo rutrum rhoncus faucibus.
                 </p>    
-               <p> Morbi vestibulum maximus viverra. Maecenas commodo neque ac tellus commodo posuere at id orci. Etiam vel justo dictum, semper risus id, vestibulum turpis. Phasellus lobortis eleifend nisl sed imperdiet. Aliquam sed pulvinar orci. Nulla facilisi. In maximus ultricies lacus.</p>
+               <p class="dark">  Morbi vestibulum maximus viverra. Maecenas commodo neque ac tellus commodo posuere at id orci. Etiam vel justo dictum, semper risus id, vestibulum turpis. Phasellus lobortis eleifend nisl sed imperdiet. Aliquam sed pulvinar orci. Nulla facilisi. In maximus ultricies lacus.</p>
             </article>
 
             <aside id="sidebar">
+                <div class="dark"> 
                 <h3>What We Do</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent libero neque, lobortis quis enim id, lobortis vulputate est. Donec tincidunt ligula a erat elementum, non tincidunt diam fermentum. </p>
-
+                </div>
             </aside>
 
         </div>
