--- a/gfont/index.html
+++ b/gfont/index.html
@@ -3,12 +3,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Breadcrupmb Navigation</title>
     <link href="https://fonts.googleapis.com/css?family=Cute+Font|Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>This heading is designed with sans-serif</h1>
-
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li>.</li>
+            <li>
+                <a href="/">About</a>
+            </li>
+            <li>.</li>
+            <li>
+                   <a href="/">Baustelle</a> 
+            </li>
+        </ul>
 </body>
 </html>
