--- a/gfont/index.html
+++ b/gfont/index.html
@@ -4,22 +4,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Breadcrupmb Navigation</title>
-    <link href="https://fonts.googleapis.com/css?family=Cute+Font|Lato&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>.</li>
-            <li>
-                <a href="/">About</a>
-            </li>
-            <li>.</li>
-            <li>
-                   <a href="/">Baustelle</a> 
-            </li>
-        </ul>
+      <div class="grid">
+          <div class="title">
+          </div>
+          <div class="header">Header:Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Nobis, sunt pariatur. Laborum velit doloribus hic 
+                veniam tempore, suscipit laboriosam quis iure corrupti cumque. 
+               Numquam porro facilis sequi dolores repudiandae. Quae?
+               Lorem ipsum dolor sit, amet consectetur
+               adipisicing elit. Nobis, sunt pariatur. Laborum velit doloribus hic 
+               veniam tempore, suscipit laboriosam quis iure corrupti cumque. 
+              Numquam porro facilis sequi dolores repudiandae. Quae?
+              Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Nobis, sunt pariatur. Laborum velit doloribus hic 
+              veniam tempore, suscipit laboriosam quis iure corrupti cumque. 
+             Numquam porro facilis sequi dolores repudiandae. Quae?
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus tempore aut odio totam delectus aliquam quaerat exercitationem nobis deserunt commodi!</p>
+            </div>
+          <div class="sidebar">sidebar:Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Nobis, sunt pariatur. Laborum velit doloribus hic 
+                veniam tempore, suscipit laboriosam quis iure corrupti cumque. 
+               Numquam porro facilis sequi dolores repudiandae. Quae?
+               Lorem ipsum dolor sit, amet consectetur
+               adipisicing elit. Nobis, sunt pariatur. Laborum velit doloribus hic 
+               veniam tempore, suscipit laboriosam quis iure corrupti cumque. 
+              Numquam porro facilis sequi dolores repudiandae. Quae?
+              Lorem ipsum dolor sit, amet consectetur
+              adipisicing elit. Nobis, sunt pariatur. Laborum velit doloribus hic 
+              veniam tempore, suscipit laboriosam quis iure corrupti cumque. 
+             Numquam porro facilis sequi dolores repudiandae. Quae?
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis officia consectetur dolores cumque eum quisquam repellendus distinctio accusantium praesentium quasi.</p>
+            </div>
+          <div class="content">Content</div>
+          <div class="footer">Footer</div>
+
+      </div>
 </body>
 </html>
