--- a/javascript/loopexercise/exe2.html
+++ b/javascript/loopexercise/exe2.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+    let birthyear=1994;
+    let futureyear=2050;
+    document.writeln("I will be either "+ (futureyear-birthyear) + "or " +(futureyear-birthyear-1) + "in " +futureyear);
+
+    </script>
 </body>
 </html>
