--- a/javascript/loopexercise/exe3.html
+++ b/javascript/loopexercise/exe3.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+    var x=23;
+    var y=45;
+    if(x>y){
+        document.writeln("The grather number of 23 and 45 is 45");
+    }
+    else{
+        document.writeln("The smaller number of 23 and 45 is 23");
+    }
+    </script>
 </body>
 </html>
