--- a/javascript/helloworld/Event.html
+++ b/javascript/helloworld/Event.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Element</title>
 </head>
 <body>
-    
+    <button onclick="this.innerHTML=Date()">Click me to show the date</button>
+    <input type="text" name="firstname" value="Ali">
 </body>
 </html>
