--- a/javascript/loopexercise/multiplicaiton.html
+++ b/javascript/loopexercise/multiplicaiton.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        let x;
+        let i;
+    for(let i=0; i<10; i++){
+        for(let x=0; i<10; i++){
+        }
+        document.writeln(i*x);
+
+    }
+    </script>
 </body>
 </html>
