This is the update repository of my github acount

--- a/SINGA/index.html
+++ b/SINGA/index.html
@@ -28,7 +28,7 @@
 <div class="slideshow">
     <div class="content">
         <div class="content-carrousel">
-            <figure class="shadow"><img src="/img/singa/1.jpg" alt=""></figure>
+            <figure class="shadow"><img src="/img/singa/1.jpg" alt="s"></figure>
             <figure class="shadow"><img src="/img/singa/2.jpg" alt=""></figure>
             <figure class="shadow"><img src="/img/singa/3.jpg" alt=""></figure>
             <figure class="shadow"><img src="/img/singa/4.jpg" alt=""></figure>
